--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -1,4 +1,5 @@
 <ul class="main-navigation">
+  <li><a href="{{ root_url }}/about">About</a></li>
   <li><a href="{{ root_url }}/">Blog</a></li>
   <li><a href="{{ root_url }}/schedule">Schedule</a></li>
   <li><a href="{{ root_url }}/papers">Papers</a></li>
