Add recent posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,19 @@
 ---
 layout: default
 ---
+<aside class="recent-posts">
+  <h2>Recent posts</h2>
+  <ul>
+      {% for post in site.posts limit:10 %}
+        <li>
+          <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
+          <h2>
+            <a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+          </h2>
+        </li>
+      {% endfor %}
+  </ul>
+</aside>
 <div class="post">
 
   <header class="post-header">
